# llm-evaluation-framework

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: eval_config.yaml
data/: sample_eval_dataset.csv
src/llm_eval_framework/: runner.py
src/llm_eval_framework/evaluators/: base.py  exact_match.py  keyword_coverage.py  latency_check.py  toxicity_check.py
src/llm_eval_framework/providers/: base.py  mock_provider.py  openai_provider.py
src/llm_eval_framework/reporting/: report_generator.py
src/llm_eval_framework/utils/: config_loader.py
src/llm_test_evaluation_framework.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_keyword_coverage.py  test_runner.py
