[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-test-evaluation-framework"
version = "0.1.0"
description = "Python framework for evaluating LLM responses"
authors = [{ name = "Aditya" }]
requires-python = ">=3.10"
dependencies = [
  "pytest==8.3.4",
  "pandas==2.2.3",
  "pyyaml==6.0.2",
  "jinja2==3.1.5",
  "python-dotenv==1.0.1",
  "openai==1.59.7"
]

[tool.setuptools.packages.find]
where = ["src"]
